# court_rules_search

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yml  environment.yml  main.py  pyproject.toml
src/: __init__.py
src/app/data/crawler/: base.py  base_crawler.py  fed_rules.py  main.py
src/app/utils/: get_logger.py  logging_utils.py
tests/unit/: test_base_crawler.py
